Fixed Carousel on smaller screen

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,3 +9,15 @@
   margin-top: 4px;
   margin-bottom: 4px;
 }
+
+.CarouselImgContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 20px;
+}
+@media (max-width: 390px) {
+  .CarouselImgContainer {
+    margin: 10px;
+  }
+}
